--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,30 @@
+<h1><%= @hash[:team][:name] %></h1>
+<br>
+<h2>Team Motto: <%= @hash[:team][:motto] %></h2>
 
+<br>
+<br>
+
+<h2>Hero Name: <%= @hash[:team][:members][0][:name] %></h2>
+<br>
+<h1>Hero Power: <%= @hash[:team][:members][0][:power] %></h2>
+<br>
+<h1>Hero Biography: <%= @hash[:team][:members][0][:biography] %></h2>
+
+<br>
+<br>
+
+<h2>Hero Name: <%= @hash[:team][:members][1][:name] %></h2>
+<br>
+<h1>Hero Power: <%= @hash[:team][:members][1][:power] %></h2>
+<br>
+<h1>Hero Biography: <%= @hash[:team][:members][1][:biography] %></h2>
+
+<br>
+<br>
+
+<h2>Hero Name: <%= @hash[:team][:members][2][:name] %></h2>
+<br>
+<h1>Hero Power: <%= @hash[:team][:members][2][:power] %></h2>
+<br>
+<h1>Hero Biography: <%= @hash[:team][:members][2][:biography] %></h2>
