--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,40 @@
+<h1>Create a Team and Heroes!</h1>
+<br>
 
+<form method="post" action="/teams">
+  <br>
+  <label for="team[name]"> Team Name: </label>
+  <input type="text" name="team[name]" id="team[name]">
+  <label for="team[motto]"> Team Motto: </label>
+  <input type="text" name="team[motto]" id="team[motto]">
+  <br>
+  <h2>Hero 1</h2>
+  <br>
+  <label for="team[members][][name]"> Hero's Name: </label>
+  <input type="text" name="team[members][][name]" id="member1_name">
+  <label for="team[members][][power]"> Hero's Power: </label>
+  <input type="text" name="team[members][][power]" id="member1_power">
+  <label for="team[members][][biography]"> Hero's Biography: </label>
+  <input type="text" name="team[members][][biography]" id="member1_bio">
+  <br>
+  <h2>Hero 2</h2>
+  <br>
+  <label for="team[members][][name]"> Hero's Name: </label>
+  <input type="text" name="team[members][][name]" id="member2_name">
+  <label for="team[members][][power]"> Hero's Power: </label>
+  <input type="text" name="team[members][][power]" id="member2_power">
+  <label for="team[members][][biography]"> Hero's Biography: </label>
+  <input type="text" name="team[members][][biography]" id="member2_bio">
+  <br>
+  <h2>Hero 3</h2>
+  <br>
+  <label for="team[membershots][][name]"> Hero's Name: </label>
+  <input type="text" name="team[members][][name]" id="member3_name">
+  <label for="team[members][][power]"> Hero's Power: </label>
+  <input type="text" name="team[members][][power]" id="member3_power">
+  <label for="team[members][][biography]"> Hero's Biography: </label>
+  <input type="text" name="team[members][][biography]" id="member3_bio">
+  <br>
+  <input type="submit" value="submit" id="submit">
 
-
+</form>
