--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,8 @@
-
-
-
+<h1><%= @team.name %></h1>
+<h2>Team Motto: <%= @team.motto %></h2>
+<br>
+<% Superhero.all.each do |hero| %>
+  <h2>Hero Name: <%= hero.name %></h2>
+  Hero Power: <%= hero.power %><br>
+  Hero Biography: <%= hero.biography %>
+  <% end %>
