--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
 
+  <form action="/teams" method = 'post'>
+
+    <h1>Create a Team and Heroes!</h1>
+
+    <label for="team_name">Team Name: </label>
+    <input type="text" id='team_name' name = team[name]> <br>
+    <label for="team_motto">Team Motto: </label>
+    <input type="text" id='team_motto' name = team[motto]> <br>
+
+    <h2> Hero 1</h2>
+    <label for="member1_name">Team Motto: </label>
+    <input type="text" id='member1_name' name = team[heroes][][name]> <br>
+    <label for="member1_power">Team Motto: </label>
+    <input type="text" id='member1_power' name = team[heroes][][power]> <br>
+    <label for="member1_bio">Team Motto: </label>
+    <input type="text" id='member1_bio' name = team[heroes][][biography]> <br>
+
+    <h2> Hero 2</h2>
+    <label for="member2_name">Team Motto: </label>
+    <input type="text" id='member2_name' name = team[heroes][][name]> <br>
+    <label for="member2_power">Team Motto: </label>
+    <input type="text" id='member2_power' name = team[heroes][][power]> <br>
+    <label for="member2_bio">Team Motto: </label>
+    <input type="text" id='member2_bio' name = team[heroes][][biography]> <br>
+
+    <h2> Hero 3</h2>
+    <label for="member3_name">Team Motto: </label>
+    <input type="text" id='member3_name' name = team[heroes][][name]> <br>
+    <label for="member3_power">Team Motto: </label>
+    <input type="text" id='member3_power' name = team[heroes][][power]> <br>
+    <label for="member3_bio">Team Motto: </label>
+    <input type="text" id='member3_bio' name = team[heroes][][biography]> <br>
+
+    <br>
+
+    <button type="submit">submit</button>
+
+  </form>
+
+</body>
+</html>
