--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,25 @@
 
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+
+  <h1><%= @team['name'] %></h1>
+  <h2>Team Motto: <%= @team['motto'] %></h2>
+
+
+  <% @team['heroes'].each do |hero| %>
+    <h3>Hero Name: <%= hero["name"] %></h3>
+    <p>Hero Power: <%= hero["power"] %></p>
+    <p>Hero Biography: <%= hero[:biography]  %></p>
+  <%end  %>
+
+</body>
+</html>
