--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,35 @@
-
+<h1>Create a Team and Heroes!</h1>
+<form action="/teams" method="POST">
+  <label>Team Name:</label>
+  <input type="text" name="team[name]">
+  <label>Team Motto:</label>
+  <input type="text" name="team[motto]">
+  <p>
+    <h2>Hero 1</h2>
+    <label>Hero Name: </label>
+    <input type="text" name="team[heroes][][name]" id="member1_name">
+    <label>Hero Power: </label>
+    <input type="text" name="team[heroes][][power]" id="member1_power">
+    <label>Hero Biography: </label>
+    <input type="text" name="team[heroes][][biography]" id="member1_bio">
+  </p>
+  <p>
+    <h2>Hero 2</h2>
+    <label for="team[heroes][][name]">Hero Name: </label>
+    <input type="text" name="team[heroes][][name]" id="member2_name">
+    <label>Hero Power: </label>
+    <input type="text" name="team[heroes][][power]" id="member2_power">
+    <label>Hero Biography: </label>
+    <input type="text" name="team[heroes][][biography]" id="member2_bio">
+  </p>
+  <p>
+    <h2>Hero 3</h2>
+    <label>Hero Name: </label>
+    <input type="text" name="team[heroes][][name]" id="member3_name">
+    <label>Hero Power: </label>
+    <input type="text" name="team[heroes][][power]" id="member3_power">
+    <label>Hero Biography: </label>
+    <input type="text" name="team[heroes][][biography]" id="member3_bio">
+  </p>
+  <button type="submit" id="submit" name="submit" value="submit">submit</button>
+</form>
