--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,12 @@
-
-
+<h1><%= @team.name %></h1>
+<h2>Team Motto: <%= @team.motto %></h2>
+<h2>Hero Name: <%= @hero1.name %></h2>
+<h3>Hero Power: <%= @hero1.power %></h3>
+<h3>Hero Biography: <%= @hero1.biography %></h3>
+<h2>Hero Name: <%= @hero2.name %></h2>
+<h3>Hero Power: <%= @hero2.power %></h3>
+<h2>Hero Biography: <%= @hero2.biography %></h2>
+<h2>Hero Name: <%= @hero3.name %></h2>
+<h3>Hero Power: <%= @hero3.power %></h3>
+<h3>Hero Biography: <%= @hero3.biography %></h3>
 
