--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,15 @@
+<h1><%= params[:team][:name] %></h1><br>
 
+<h2>Team Motto: <%= params[:team][:motto]  %></h2><br>
 
+<h2>Hero Name: <%= params[:team][:members][0][:name]  %></h2><br>
+  <p>Hero Power: <%= params[:team][:members][0][:power]  %></p><br>
+  <p>Hero Biography: <%= params[:team][:members][0][:bio] %></p><br>
 
+<h2>Hero Name: <%= params[:team][:members][1][:name] %></h2><br>
+  <p>Hero Power: <%= params[:team][:members][1][:power]  %></p><br>
+  <p>Hero Biography: <%= params[:team][:members][1][:bio] %></p><br>
+
+<h2>Hero Name: <%= params[:team][:members][2][:name] %></h2><br>
+  <p>Hero Power: <%= params[:team][:members][2][:power] %></p><br>
+  <p>Hero Biography: <%= params[:team][:members][2][:bio] %></p><br>
