--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,15 @@
+<h1>Teams</h1>
+ 
 
+  <h3>Team: <%= @team.name %></h3><br>
+  <h4>Team Motto: <%= @team.motto %></h4>
+
+ 
+<h1>Members</h1>
+<% @heros.each do |hero| %>
+    <p>Hero Name: <%= hero.name %></p><br>
+    <p>Hero Power: <%= hero.power %></p><br>
+    <p>Hero Biography: <%= hero.biography%></p><br>
+<% end %>
 
 
