--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,25 @@
+<h1>Create a Team and Heroes!</h1>
+<form action="/teams" method="post">
+  <label for="team[name]">Team Name: </label>
+  <label for="team[motto]">Team Motto: </label>
 
+  <label for="team[members][][name]">Hero's Name: </label>
+  <label for="team[members][][power]">Hero's Power: </label>
+  <label for="team[members][][bio]">Hero's Biography: </label>
+
+  <input type="text" name="team[name]" />
+  <input type="text" name="team[motto]" />
+
+  <input id="member1_name" type="text" name="team[members][][name]" />
+  <input id="member1_power" type="text" name="team[members][][power]" />
+  <input id="member1_bio" type="text" name="team[members][][bio]" />
+
+  <input id="member2_name" type="text" name="team[members][][name]" />
+  <input id="member2_power" type="text" name="team[members][][power]" />
+  <input id="member2_bio" type="text" name="team[members][][bio]" />
+
+  <input id="member3_name" type="text" name="team[members][][name]" />
+  <input id="member3_power" type="text" name="team[members][][power]" />
+  <input id="member3_bio" type="text" name="team[members][][bio]" />
+  <input id="submit" type="submit" value="Submit" />
+</form>
