--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,14 @@
+<p>Team Name: <%= @team_name %></p>
+<p>Team Motto: <%= @team_motto %></p>
 
+<p>Hero Name: <%= @member1_name %></p>
+<p>Hero Power: <%= @member1_power %></p>
+<p>Hero Biography: <%= @member1_bio %></p>
 
+<p>Hero Name: <%= @member2_name %></p>
+<p>Hero Power: <%= @member2_power %></p>
+<p>Hero Biography: <%= @member2_bio %></p>
 
+<p>Hero Name: <%= @member3_name %></p>
+<p>Hero Power: <%= @member3_power %></p>
+<p>Hero Biography: <%= @member3_bio %></p>
