--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,16 @@
-
-
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1> <%= params[:team][:name] %></h1>
+    <h3> Team Motto: <%= params[:team][:motto] %> </h3>
+    <% params[:team][:members].each do |member| %>
+      <h3>Hero Name: <%= member[:name] %></h3>
+      <p>Hero Power: <%= member[:power] %></p>
+      <p>Hero Biography: <%= member[:bio] %></p>
+    <% end %>
+  </body>
+</html>
