--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,43 @@
 
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h2>Create a Team and Heroes!</h2>
+    <form action="/teams" method="post">
+      <label for="team_name">Team Name:</label>
+      <input type="text" name="team[name]" id="team_name"><br>
+      <label for="team_motto">Team Motto:</label>
+      <input type="text" name="team[motto]" id="team_motto"><br>
+
+      <h4>Hero 1</h4>
+      <label for="member1_name">Hero's Name:</label>
+      <input type="text" name="team[members][][name]" id="member1_name"> <br>
+      <label for="member1_power">Hero's Power:</label>
+      <input type="text" name="team[members][][power]" id="member1_power"> <br>
+      <label for="member1_bio">Hero's Bio:</label>
+      <input type="text" name="team[members][][bio]" id="member1_bio"> <br>
+
+      <h4>Hero 2</h4>
+      <label for="member2_name">Hero's Name:</label>
+      <input type="text" name="team[members][][name]" id="member2_name"> <br>
+      <label for="member2_power">Hero's Power:</label>
+      <input type="text" name="team[members][][power]" id="member2_power"> <br>
+      <label for="member2_bio">Hero's Bio:</label>
+      <input type="text" name="team[members][][bio]" id="member2_bio"> <br>
+
+      <h4>Hero 3</h4>
+      <label for="member3_name">Hero's Name:</label>
+      <input type="text" name="team[members][][name]" id="member3_name"> <br>
+      <label for="member3_power">Hero's Power:</label>
+      <input type="text" name="team[members][][power]" id="member3_power"> <br>
+      <label for="member3_bio">Hero's Bio:</label>
+      <input type="text" name="team[members][][bio]" id="member3_bio"> <br>
+      <br>
+      <input type="submit" value="submit">
+    </form>
+  </body>
+</html>
